# NLP-Support-Ticket

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
k8s/: job.yaml  jobs.yml  pvc.yaml
ml/: eda.ipynb
models/: model_classification.pkl
monitoring/: evidently.py
notebook/: eda.ipynb
utils/: embeddings.py  pipeline.py  training.py
