[project]
name = "mlops-ticket-classification"
version = "0.1.0"
description = "MLOps pipeline for IT support ticket classification"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    "nltk>=3.8.1",
    "transformers>=4.36.2",
    "onnxruntime>=1.16.0,<1.24.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.2",
    "chromadb>=0.4.22",
    "evidently>=0.4.11",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "prometheus-client>=0.19.0",
    "tqdm>=4.66.1",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.6",
    "ipykernel>=6.27.1",
    "pytest>=7.4.3",
    "flake8>=6.1.0",
    "black>=23.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
